[package]
name = "usbnvme"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace]
members = [
    "xspiloader",
]

[workspace.dependencies]
embassy-sync = { version = "0.7" }
embassy-usb = { version = "0.4" }
embassy-usb-driver = { version = "0.1" }
embassy-futures = { version = "0.1" }
embassy-time = "0.4"
log = "0.4"
rtt-target = "0.6"
heapless = "0.8"
embedded-hal-async = "1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
# set-vtor and set-sp necessary when using xspiloader
cortex-m-rt = { version = "0.7.0", features = ["set-sp", "set-vtor"] }
panic-probe = { version = "1", features = ["print-rtt"] }
embassy-executor = { version = "0.7", features = ["executor-thread"] }

[dependencies]
embassy-executor = { workspace = true, features = [
    "arch-cortex-m", "executor-interrupt",
    "log"] }
embassy-time = { workspace = true, features = ["tick-hz-32_768"] }
embassy-sync = { workspace = true }
embassy-usb = { workspace = true }
embassy-usb-driver = { workspace = true }
embassy-futures = { workspace = true }
embassy-stm32 = { version = "0.2", features = ["time-driver-any", "stm32h7s3l8", "log"] }
embassy-usb-synopsys-otg = { version = "0.2", features = ["log"] }
embedded-hal-async = { workspace = true }
heapless = { workspace = true }
static_cell = "2.1"

mctp = { git = "http://github.com/CodeConstruct/mctp-rs/", rev = "59503b6475360eb0a80a74ab8721a6e8e685f91b", default-features = false }
mctp-estack = { git = "http://github.com/CodeConstruct/mctp-rs/", rev = "59503b6475360eb0a80a74ab8721a6e8e685f91b", default-features = false, features = ["log"] }
mctp-usb-embassy = { git = "http://github.com/CodeConstruct/mctp-rs/", rev = "59503b6475360eb0a80a74ab8721a6e8e685f91b", default-features = false, features = ["log"] }

log = { workspace = true, features = ["release_max_level_debug", "max_level_debug"] }
rtt-target = { workspace = true, features = ["log"] }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
uuid = { version = "1.16.0", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["force-soft-compact"] }
hmac = { version = "0.12.1", default-features = false }

# [patch.'https://github.com/CodeConstruct/mctp-rs/']
# mctp-estack = { path = "../mctp-rs/mctp-estack" }
# mctp = { path = "../mctp-rs/mctp" }
# mctp-usb-embassy = { path = "../mctp-rs/mctp-usb-embassy" }

[patch.'https://github.com/CodeConstruct/mctp-rs/']
# Patch mctp-rs so that it won't clash with slightly different git rev dependencies from nvme-mi-dev.
# Double-slash bodge workaround for https://github.com/rust-lang/cargo/issues/5478
mctp = { git = "http://github.com/CodeConstruct//mctp-rs/", rev = "59503b6475360eb0a80a74ab8721a6e8e685f91b" }

[patch.crates-io]
# mctp-estack currently requires unreleased git embassy-sync for https://github.com/embassy-rs/embassy/pull/3829
embassy-sync = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }

# https://github.com/embassy-rs/embassy/pull/3765 Display for Hertz in embassy-stm32
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }
embassy-usb-synopsys-otg = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }

embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "bdeeb388fff2462cccf82cf4f8444c0419db5525" }

[features]
default = ["log-usbserial"]
mctp-bench = []
log-usbserial = []

[profile.release]
debug = 2
# 3 is larger
# z is slightly smaller, s is faster.
opt-level = "z"
lto = 'fat'
codegen-units = 1
incremental = false
panic = "abort"

[profile.dev]
debug = 2
opt-level = "z"
lto = 'fat'
debug-assertions = true
# 4kB code size increase
overflow-checks = true
panic = "abort"
