[package]
name = "usbnvme"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace]
members = [
    "xspiloader",
]

[workspace.dependencies]
embassy-sync = { version = "0.7" }
embassy-usb = { version = "0.5", default-features = false }
embassy-usb-driver = { version = "0.2" }
embassy-futures = { version = "0.1" }
embassy-time = "0.4"
log = "0.4"
rtt-target = "0.6"
heapless = "0.8"
embedded-hal-async = "1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
# set-vtor and set-sp necessary when using xspiloader
cortex-m-rt = { version = "0.7.0", features = ["set-sp", "set-vtor"] }
panic-probe = { version = "1", features = ["print-rtt"] }
embassy-executor = { version = "0.8", features = ["executor-thread"] }
embassy-stm32 = { version = "0.3", features = ["time-driver-any", "stm32h7s3l8", "unstable-pac", "log"] }

[dependencies]
embassy-executor = { workspace = true, features = [
    "arch-cortex-m", "executor-interrupt",
    "log"] }
embassy-time = { workspace = true, features = ["tick-hz-32_768"] }
embassy-sync = { workspace = true }
embassy-usb = { workspace = true }
embassy-usb-driver = { workspace = true }
embassy-futures = { workspace = true }
embassy-stm32 = { workspace = true }
embassy-usb-synopsys-otg = { version = "0.3" }
embedded-hal-async = { workspace = true }
heapless = { workspace = true }
static_cell = "2.1"

mctp = { version = "0.2", default-features = false }
mctp-estack = { version = "0.1", default-features = false, features = ["log"] }
mctp-usb-embassy = { version = "0.1", default-features = false, features = ["log"] }
pldm = { version = "0.2", default-features = false, optional = true }
pldm-file = { version = "0.1", default-features = false, optional = true }
pldm-platform = { version = "0.1", default-features = false, optional = true }
nvme-mi-dev = { git = "https://github.com/CodeConstruct/nvme-mi-dev", optional = true }

log = { workspace = true, features = ["release_max_level_debug", "max_level_debug"] }
rtt-target = { workspace = true, features = ["log"] }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
uuid = { version = "1.16.0", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["force-soft-compact"] }
hmac = { version = "0.12.1", default-features = false }

deku = { git = "https://github.com/CodeConstruct/deku.git", tag = "cc/deku-v0.19.1/no-alloc-3", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[patch.crates-io]
# "Fix vrefbuf trace with log" https://github.com/embassy-rs/embassy/pull/4553
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy/", rev = "a5cb04bdab602bc3bd056d254a9d61cad55bd967" }
embassy-usb-synopsys-otg = { git = "https://github.com/embassy-rs/embassy/", rev = "a5cb04bdab602bc3bd056d254a9d61cad55bd967" }

embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "a5cb04bdab602bc3bd056d254a9d61cad55bd967" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy/", rev = "a5cb04bdab602bc3bd056d254a9d61cad55bd967" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy/", rev = "a5cb04bdab602bc3bd056d254a9d61cad55bd967" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy/", rev = "a5cb04bdab602bc3bd056d254a9d61cad55bd967" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "a5cb04bdab602bc3bd056d254a9d61cad55bd967" }


# Updated for embassy-usb api change
mctp-usb-embassy = { git = "https://github.com/CodeConstruct/mctp-rs", rev = "88c9eba20c6ac62025438bb7ca9b9578c9f2679c" }
# Updated to match mtp-usb-embassy. Also has performance and stack size improvements.
# Includes ControlEvent change.
mctp-estack = { git = "https://github.com/CodeConstruct/mctp-rs", rev = "88c9eba20c6ac62025438bb7ca9b9578c9f2679c" }
mctp = { git = "https://github.com/CodeConstruct/mctp-rs", rev = "88c9eba20c6ac62025438bb7ca9b9578c9f2679c" }

# pldm-file and pldm-platform are not yet published
pldm = { git = "https://github.com/CodeConstruct/mctp-rs", rev = "88c9eba20c6ac62025438bb7ca9b9578c9f2679c" }
pldm-file = { git = "https://github.com/CodeConstruct/mctp-rs", rev = "88c9eba20c6ac62025438bb7ca9b9578c9f2679c" }
pldm-platform = { git = "https://github.com/CodeConstruct/mctp-rs", rev = "88c9eba20c6ac62025438bb7ca9b9578c9f2679c" }

[features]
default = ["log-usbserial", "nvme-mi", "pldm-file"]
nvme-mi = ["dep:nvme-mi-dev"]
pldm-file = ["dep:pldm-file", "dep:pldm-platform", "dep:pldm"]
mctp-bench = []
log-usbserial = []

[profile.release]
debug = 2
# 3 is larger
# z is slightly smaller, s is faster.
opt-level = "z"
lto = 'fat'
codegen-units = 1
incremental = false
panic = "abort"

[profile.dev]
debug = 2
opt-level = "z"
lto = 'fat'
debug-assertions = true
# 4kB code size increase
overflow-checks = true
panic = "abort"
