[package]
name = "mctp-usb-embassy"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
embassy-usb = { workspace = true }
embassy-usb-driver = { workspace = true }
log = { workspace = true, optional = true }
mctp = { workspace = true }
mctp-estack = { workspace = true }
heapless = { workspace = true }

[features]
default = ["log"]
defmt = ["mctp/defmt", "mctp-estack/defmt"]
log = ["mctp-estack/log", "dep:log"]
