[package]
name = "xspiloader"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { workspace = true, features = [
    "arch-cortex-m", "log",
    ] }
embassy-stm32 = { workspace = true }

log = { workspace = true, features = ["release_max_level_info"] }
rtt-target = { workspace = true, features = ["log"] }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }

# Required for ELF payloads build with Rust 1.89
# https://github.com/Neotron-Compute/neotron-loader/pull/2
neotron-loader = { git = "https://github.com/Neotron-Compute/neotron-loader", rev = "ab92cecd8a458044aef30b39c87112244deb69c6" }
