[package]
name = "xspiloader"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { workspace = true, features = [
    "arch-cortex-m", "log",
    ] }
embassy-stm32 = { workspace = true }

log = { workspace = true, features = ["release_max_level_info"] }
rtt-target = { workspace = true, features = ["log"] }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }

neotron-loader = { git = "https://github.com/mkj/neotron-loader", branch = "pr/elf-os" }
